crates/oxc_codegen/tests/integration/snapshots/coverage.snap
---
source: crates/oxc_codegen/tests/integration/tester.rs
---
########## 0
/* v8 ignore next */ x
----------
/* v8 ignore next */ x;

########## 1
/* v8 ignore next 2 */ x
----------
/* v8 ignore next 2 */ x;

########## 2
/* v8 ignore start */ x
----------
/* v8 ignore start */ x;

########## 3
/* v8 ignore stop */ x
----------
/* v8 ignore stop */ x;

########## 4
/* v8 ignore if */ x
----------
/* v8 ignore if */ x;

########## 5
/* v8 ignore else */ x
----------
/* v8 ignore else */ x;

########## 6
/* v8 ignore file */ x
----------
/* v8 ignore file */ x;

########## 7
/* c8 ignore next */ x
----------
/* c8 ignore next */ x;

########## 8
/* c8 ignore next 2 */x 
----------
/* c8 ignore next 2 */ x;

########## 9
/* c8 ignore start */ x
----------
/* c8 ignore start */ x;

########## 10
/* c8 ignore stop */ x
----------
/* c8 ignore stop */ x;

########## 11
/* node:coverage disable */ x
----------
/* node:coverage disable */ x;

########## 12
/* node:coverage enable */ x
----------
/* node:coverage enable */ x;

########## 13
/* node:coverage ignore next */ x
----------
/* node:coverage ignore next */ x;

########## 14
/* node:coverage ignore next 2 */ x
----------
/* node:coverage ignore next 2 */ x;

########## 15
/* istanbul ignore if */ x
----------
/* istanbul ignore if */ x;

########## 16
/* istanbul ignore else */ x
----------
/* istanbul ignore else */ x;

########## 17
/* istanbul ignore next */ x
----------
/* istanbul ignore next */ x;

########## 18
/* istanbul ignore file */ x
----------
/* istanbul ignore file */ x;

########## 19
try { something(); }
/* istanbul ignore next */
catch(e) {
  // should never happen
}

----------
try {
	something();
}
/* istanbul ignore next */
 catch (e) {
	// should never happen
}

########## 20
try { console.log('test'); }
catch (err) /* v8 ignore next */ { console.error(err); }
----------
try {
	console.log('test');
} catch (err) /* v8 ignore next */ {
	console.error(err);
}

########## 21
try { something(); }
catch (err) /* c8 ignore next */ /* istanbul ignore next */ { handle(err); }
----------
try {
	something();
} catch (err) /* c8 ignore next */ /* istanbul ignore next */ {
	handle(err);
}

########## 22
try { something(); }
catch (err) // v8 ignore next
{ handle(err); }
----------
try {
	something();
} catch (err) // v8 ignore next
{
	handle(err);
}

########## 23
const a = Math.random() ? 1 : /* istanbul ignore next */ 2;
----------
const a = Math.random() ? 1 : /* istanbul ignore next */ 2;

########## 24
switch (Math.random()) {
  case 0.5: break;
  /* istanbul ignore next */
  default: break;
}
----------
switch (Math.random()) {
	case .5: break;
	/* istanbul ignore next */
	default: break;
}

########## 25
const obj = {
  a: () => 1,
  /* v8 ignore next */
  b: () => 2,
}
----------
const obj = {
	a: () => 1,
	/* v8 ignore next */
	b: () => 2
};

########## 26
const obj = { /* v8 ignore next */ a: () => 1 }
----------
const obj = { /* v8 ignore next */ a: () => 1 };

########## 27
const obj = {
  /* v8 ignore next */
  a: () => 1,
  b: () => 2,
}
----------
const obj = {
	/* v8 ignore next */
	a: () => 1,
	b: () => 2
};

########## 28
const obj = {
  a: 1,
  /* v8 ignore next */
  ...rest,
}
----------
const obj = {
	a: 1,
	/* v8 ignore next */
	...rest
};
