crates/oxc_codegen/tests/integration/snapshots/legal_eof_minify_comments.snap
---
source: crates/oxc_codegen/tests/integration/tester.rs
---
########## 0
/* @license */
/* @license */
foo;bar;
----------
foo;bar;
/* @license */

########## 1
/* @license */
/* @preserve */
foo;bar;
----------
foo;bar;
/* @license */
/* @preserve */

########## 2
/* @license */
//! KEEP
foo;bar;
----------
foo;bar;
/* @license */
//! KEEP

########## 3
/* @license */
/*! KEEP */
foo;bar;
----------
foo;bar;
/* @license */
/*! KEEP */

########## 4
/* @license *//*! KEEP */
foo;bar;
----------
foo;bar;
/* @license */
/*! KEEP */

########## 5
function test() {
    /*
    * @license
    * Copyright notice 2
    */
    bar;
}
----------
function test(){bar}
/*
* @license
* Copyright notice 2
*/

########## 6
function bar() { var foo; /*! #__NO_SIDE_EFFECTS__ */ function baz() { } }
----------
function bar(){var foo;function baz(){}}
/*! #__NO_SIDE_EFFECTS__ */

########## 7
function foo() {
	(() => {
		/**
		 * @preserve
		 */
	})();
	/**
	 * @preserve
	 */
}
/**
 * @preserve
 */
----------
function foo(){(()=>{
/**
* @preserve
*/
})()
/**
* @preserve
*/
}
/**
* @preserve
*/
/**
* @preserve
*/

########## 8
/**
* @preserve
*/

----------
/**
* @preserve
*/

/**
* @preserve
*/

########## 9
/*!
 * legal comment
 */

"use strict";

export const foo = 'foo';
----------
'use strict';export const foo="foo";
/*!
* legal comment
*/
