crates/oxc_codegen/tests/integration/snapshots/misc_comments.snap
---
source: crates/oxc_codegen/tests/integration/tester.rs
---
########## 0
/** block1 */ /** block2 */
function foo() {}

----------
/** block1 *//** block2 */
function foo() {}
